Add image width

--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,10 @@ p {
   text-align: center;
 }
 
+. products {
+  max-width: 100%;
+}
+
 . cart-button {
   font-family: Oswald, sans-serif;
  display: inline-block;
