--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: karma : serif;
+  font-family: 'Karma' : serif;
   line-height: 1.5;
   margin: 0;
 }
@@ -41,11 +41,11 @@ p {
   text-align: center;
 }
 
-. products {
+.products {
   max-width: 100%;
 }
 
-. cart-button {
+.cart-button {
   font-family: Oswald, sans-serif;
  display: inline-block;
  background-color: #6f00e7;
